--- a/style.css
+++ b/style.css
@@ -1,28 +1,31 @@
 /*******************************
 ** Setting up common elements **
 *******************************/
- * {
+* {
 	margin: 0;
 	padding: 0px;
 	font-family: sans-serif;
 	font-size:16px; }
 
 html, body {
+	background-color:#FFF; }
+	
+footer {
+	width:100%;
+	/*background-color:#F9F9F9;*/
 	background-color:#FFF;
-	height:100%;
-	padding-bottom: -40px; }
+	height:40px;
+	line-height:40px;
+	position:fixed;
+	bottom:0; }
 
-// Main color is #A10000
-// Dark color is #730000
-// Deactivated color is #939393
-
+/*Main color is #A10000
+ Dark color is #730000
+ Deactivated color is #939393
+*/
 /*********************************************************************************************
 ** Styling boxes, setting up their sizes, adding some color, and calling for a unique font. **
 *********************************************************************************************/
-.content {
-	//Do not delete, breaks website (no idea why)
-	}
-	
 .wrapper {
 	margin-left:auto;
 	margin-right:auto;
@@ -34,69 +37,32 @@ html, body {
 	padding:0px;
 	border-bottom:5px solid #A10000;
 	border-top:5px solid #A10000;
-	padding:7px; }
+	padding:7px;
+	height:16px;}
 	
 .main {
 	background-color:#F9F9F9;
-	margin-bottom:10px;
 	padding:15px;
-	min-height:70%; }
+	overflow:hidden;
+	height:100%; }
 	
 .leftmain {
 	margin-left:auto;
 	width:475px;
 	float:left;
-	padding-left:25px; }
+	padding-left:25px;
+	height:600px; }
 
 .rightmain {
 	margin-right:auto;
 	width:475px;
 	float:right;
-	padding-right:25px; }
-
-footer {
-	width:100%;
-	background-color:#F9F9F9;
-	height:40px;
-	line-height:40px; }
-	
-.push {
-	height:40px; }
+	padding-right:25px;
+	height:600px; }
 	
 .input_main {
 	margin-top:5px;
 	margin-bottom:5px; }
-
-/***********************
-** Navigation bar fun **
-***********************/
-#navbar {
-	height:100px;
-	width:100%;
-	margin-bottom:5px;
-	background-color:#F9F9F9; }
-
-#navbar ul { 
-	margin: 0; 
-	padding: 5px; 
-	list-style-type: none; 
-	text-align: center; 
-	position:static;
-	float:right;
-	line-height:150px; } 			/* Line height is set to height of container div, thus centerizing the text. */ 
- 
-#navbar ul li {  
-	display: inline; } 
- 
-#navbar ul li a { 
-	text-decoration: none; 
-	font-size:20px;
-	padding: .2em 1em; 
-	color: #f9f9f9; } 
- 
-#navbar ul li a:hover { 
-	color: #161616; 
-	background-color: #f7f7f6; } 
 	
 /****************************
 ** Classes to align images **
@@ -105,32 +71,29 @@ footer {
  	float:left; }
  .right {
 	float:right; }
- .center {
- 	margin-top:10px;
- 	margin-bottom:10px; }
- 
-/****************************
-** Container div styling - text is put inside and set to the height of the image next to it.  Keeps the content div propped open so the image isn't in the footer. **
-****************************/
+
+#navbar {
+	height:40px;
+	background-color:#F9F9F9;
+	line-height:40px; }
 
 /********************
 ** Button Classes! **
 *********************/
 
 .btn {
-  -webkit-border-radius: 3;
-  -moz-border-radius: 3;
-  border-radius: 3px;
-  font-family: Arial;
-  color: #ffffff;
-  font-size: 15px;
-  background: #a10000;
-  padding: 8px 12px 8px 12px;
-  text-decoration: none;
-  margin:10px;
-}
+	-webkit-border-radius: 3;
+	-moz-border-radius: 3;
+	border-radius: 3px;
+	font-family: Arial;
+	color: #ffffff;
+	font-size: 15px;
+	background: #a10000;
+	padding: 8px 12px 8px 12px;
+	text-decoration: none;
+	margin:5px 5px 5px 0px;
+	border:0px; }
 
 .btn:hover {
-  background: #730000;
-  text-decoration: none;
-}
+	background: #730000;
+	text-decoration: none; }
