--- a/style.css
+++ b/style.css
@@ -76,7 +76,25 @@ a {
 	
 .input_main {
 	margin-top:3px;
-	margin-bottom:15px; }
+	margin-bottom:15px;
+	padding:6px;
+	border: 1px solid #c4c4c4;
+    font-size: 16px;
+    padding: 4px;
+    border-radius: 4px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    box-shadow: 0px 0px 8px #d9d9d9;
+    -moz-box-shadow: 0px 0px 8px #d9d9d9;
+    -webkit-box-shadow: 0px 0px 8px #d9d9d9; }
+
+.input_main:focus { 
+    outline: none;
+    border: 1px solid #D40000;
+    box-shadow: 0px 0px 8px #D40000;
+    -moz-box-shadow: 0px 0px 8px #D40000;
+    -webkit-box-shadow: 0px 0px 8px #D40000;
+    transition: box-shadow linear 1s; }
 
 #navbar {
 	height:60px;
@@ -90,7 +108,6 @@ a {
 	width:1000px;
 	position:fixed;
 	bottom:50px;
-	display:none;
 	z-index:1;}
 
 /********************
